--- a/test.html
+++ b/test.html
@@ -6,9 +6,9 @@
   <title>ブログ一覧 | 合同会社WaJu</title>
 
   <!-- SEO -->
-  <meta name="description" content="CARELAYや介護・福祉業界に関する最新情報、コラム、イベントなどをお届けします。">
+  <meta name="description" content="介護・福祉業界に関する最新情報、コラム、イベントなどをお届けします。">
   <meta property="og:title" content="ブログ一覧 | 合同会社WaJu">
-  <meta property="og:description" content="CARELAYや介護・福祉業界に関する最新情報、コラム、イベントなどをお届けします。">
+  <meta property="og:description" content="介護・福祉業界に関する最新情報、コラム、イベントなどをお届けします。">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0006.png">
   <meta property="og:url" content="https://waju.co.jp/blog/">
@@ -51,18 +51,20 @@
   <header id="site-header"></header>
 
   <main id="page-main">
-    <section class="max-w-6xl mx-auto px-6 py-16 sm:py-20">
+    <!-- py-16 sm:py-20 から py-8 sm:py-16 に変更してモバイルの余白を削減 -->
+    <section class="max-w-6xl mx-auto px-6 py-8 sm:py-16">
       <!-- 見出し: モバイルでは text-3xl に縮小 -->
-      <h1 class="text-3xl sm:text-4xl font-extrabold text-center mb-10 sm:mb-12 text-waju-primary relative after:content-[''] after:block after:w-12 after:h-1 after:bg-waju-accent after:mx-auto after:mt-1">ブログ一覧</h1>
+      <h1 class="text-3xl sm:text-4xl font-extrabold text-center mb-6 sm:mb-12 text-waju-primary relative after:content-[''] after:block after:w-12 after:h-1 after:bg-waju-accent after:mx-auto after:mt-1">ブログ一覧</h1>
 
       <!-- カテゴリフィルタと検索 -->
-      <!-- モバイルでは p-3, gap-3 に縮小し、selectのw-40で2行化を防ぐ -->
-      <div class="flex flex-col sm:flex-row justify-between items-center gap-3 sm:gap-4 mb-8 sm:mb-10 p-3 sm:p-4 bg-white rounded-xl shadow-lg w-fit max-w-full mx-auto">
-        <div class="text-base sm:text-lg font-semibold text-gray-700 flex-shrink-0">
-            カテゴリで絞り込む:
+      <!-- w-fit max-w-full mx-autoを維持しつつ、モバイルでは flex-nowrap に変更して1行表示を強制 -->
+      <div class="flex flex-row justify-center items-center gap-2 sm:gap-4 mb-8 sm:mb-10 p-3 sm:p-4 bg-white rounded-xl shadow-lg w-fit max-w-full mx-auto whitespace-nowrap overflow-x-auto">
+        <!-- モバイルでは表示テキストを「絞り込み」に変更し、サイズを text-sm に -->
+        <div class="text-sm sm:text-lg font-semibold text-gray-700 flex-shrink-0">
+            絞り込む:
         </div>
-        <!-- モバイルでは w-40 に縮小 -->
-        <select id="categoryFilter" class="border border-gray-300 rounded-lg px-3 py-1.5 w-40 sm:w-48 focus:ring-waju-primary focus:border-waju-primary transition duration-150">
+        <!-- モバイルでは w-auto にして内容に合わせる -->
+        <select id="categoryFilter" class="border border-gray-300 rounded-lg px-3 py-1.5 w-auto sm:w-48 focus:ring-waju-primary focus:border-waju-primary transition duration-150 text-sm sm:text-base">
           <option value="">すべてのカテゴリ</option>
           <!-- カテゴリはJSで挿入されます -->
         </select>
@@ -140,14 +142,17 @@
       // 記事のHTMLレンダリング部分をリスト形式のカードデザインに刷新
       articlesEl.innerHTML = data.map(a => {
         const date = new Date(a.created_at).toLocaleDateString('ja-JP');
-        const description = a.description || (a.content ? a.content.replace(/<[^>]+>/g,"").substring(0, 100) + "…" : "詳細を見る"); 
+        // 記事本文の文字サイズを text-xs から text-sm に変更
+        const description = a.description || (a.content ? a.content.replace(/<[^>]+>/g,"").substring(0, 80) + "…" : "詳細を見る"); 
         const thumbnailUrl = a.thumbnail_url || 'https://placehold.co/150x150/1e40af/ffffff?text=BLOG'; 
 
         return `
           <a href="/blog-detail.html?slug=${a.slug}" class="block p-3 sm:p-4 bg-white rounded-xl shadow-lg hover:shadow-xl hover:ring-2 hover:ring-waju-primary transition duration-300 group">
-            <div class="flex flex-col sm:flex-row gap-3 sm:gap-4 items-start">
+            <!-- モバイルでも flex-row でサムネイルと情報を横並びにする -->
+            <div class="flex flex-row gap-3 sm:gap-4 items-start">
+              
               <!-- サムネイル（左側） - 正方形、画像をcontainで表示、余白をbg-gray-200で埋める -->
-              <!-- モバイルでは w-20 (80px) に縮小し、PCでは w-28 (112px) を使用 -->
+              <!-- w-20 (80px) に固定し、PCでは w-28 (112px) を使用 -->
               <div class="flex-shrink-0 w-20 sm:w-28 aspect-square overflow-hidden rounded-lg bg-gray-200">
                 <img src="${thumbnailUrl}" alt="${a.title}" 
                      class="w-full h-full object-contain transition duration-300 group-hover:scale-105"
@@ -156,18 +161,18 @@
               
               <!-- 詳細情報（右側） -->
               <div class="flex-1 min-w-0">
-                <div class="flex justify-between items-center mb-1">
+                <div class="flex items-center mb-1">
                     <!-- カテゴリタグ -->
-                    <span class="inline-block bg-waju-light text-waju-primary text-xs font-semibold px-2 py-0.5 sm:px-3 sm:py-1 rounded-full uppercase tracking-wider">${a.category || "コラム"}</span>
-                    <!-- 公開日 -->
-                    <span class="text-xs sm:text-sm text-gray-500 flex-shrink-0">公開日: ${date}</span>
+                    <span class="inline-block bg-waju-light text-waju-primary text-xs font-semibold px-2 py-0.5 sm:px-3 sm:py-1 rounded-full uppercase tracking-wider mr-3">${a.category || "コラム"}</span>
+                    <!-- 公開日: text-xs から text-sm に変更 -->
+                    <span class="text-sm text-gray-500 flex-shrink-0">公開日: ${date}</span>
                 </div>
-                <!-- タイトル: モバイルでは text-lg に縮小 -->
-                <h2 class="text-base sm:text-xl font-bold text-gray-800 mb-1 sm:mb-2 group-hover:text-waju-accent transition duration-150 line-clamp-2">
+                <!-- タイトル: モバイルでは text-base に縮小 -->
+                <h2 class="text-lg sm:text-xl font-bold text-gray-800 mb-1 sm:mb-2 group-hover:text-waju-accent transition duration-150 line-clamp-2">
                   ${a.title}
                 </h2>
-                <!-- 概要: モバイルでは line-clamp-2 を維持 -->
-                <p class="text-xs sm:text-sm text-gray-600 line-clamp-2">
+                <!-- 概要: text-xs から text-sm に変更 -->
+                <p class="text-sm text-gray-600 line-clamp-2">
                   ${description}
                 </p>
               </div>
