--- a/index.html
+++ b/index.html
@@ -251,6 +251,10 @@
     setInterval(nextSlide, 5000); // Change image every 5 seconds
     updateSlider(); // Initial display setup
   </script>
+  <!-- Supabase環境変数を先に読み込む -->
+  <script src="env.js"></script>
+  <!-- そのあとにヘッダー／フッターを読み込む -->
   <script type="module" src="hf.js"></script>
+
 </body>
 </html>
