--- a/service.html
+++ b/service.html
@@ -254,6 +254,10 @@
   </main>
 
   <footer id="site-footer"></footer>
+  <!-- Supabase環境変数を先に読み込む -->
+  <script src="env.js"></script>
+  <!-- そのあとにヘッダー／フッターを読み込む -->
   <script type="module" src="hf.js"></script>
+
 </body>
 </html>
