--- a/blog-detail.html
+++ b/blog-detail.html
@@ -133,8 +133,11 @@
   <!-- 共通フッター -->
   <footer id="site-footer"></footer>
 
+  <!-- Supabase環境変数を先に読み込む -->
+  <script src="/env.js"></script>
   <!-- ヘッダー/フッターの共通スクリプト -->
   <script type="module" src="/hf.js"></script>
+
 
   <!-- Supabase 読み込み -->
   <script type="module">
@@ -142,10 +145,11 @@
 
     // 401対策: storageKeyを独自にして競合回避、セッション保持なし
     const sb = createClient(
-      "https://htnmjsqgoapvuanrsuma.supabase.co",
-      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA",
-      { auth: { persistSession: false, autoRefreshToken: false, storageKey: "sb-waju-blog" } }
-    );
+    window.env.NEXT_PUBLIC_SUPABASE_URL,
+    window.env.NEXT_PUBLIC_SUPABASE_ANON_KEY,
+    { auth: { persistSession: false, autoRefreshToken: false, storageKey: "sb-waju-blog" } }
+  );
+
 
     const $ = (s) => document.querySelector(s);
 
