--- a/contact.html
+++ b/contact.html
@@ -268,6 +268,9 @@
   </main>
 
   <footer id="site-footer"></footer>
-  <script type="module" src="hf.js"></script>
+  <!-- Supabase環境変数を先に読み込む -->
+  <script src="/env.js"></script>
+  <!-- ヘッダー・フッター -->
+  <script type="module" src="/hf.js"></script>
 </body>
 </html>
