--- a/admin-index.html
+++ b/admin-index.html
@@ -64,9 +64,11 @@
   <script type="module">
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
 
-    const supabaseUrl = 'https://htnmjsqgoapvuanrsuma.supabase.co';
-    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA';
-    const supabase = createClient(supabaseUrl, supabaseKey);
+    const supabase = createClient(
+    window.env.NEXT_PUBLIC_SUPABASE_URL,
+    window.env.NEXT_PUBLIC_SUPABASE_ANON_KEY
+  );
+
 
     async function login() {
       const email = document.getElementById("email").value;
@@ -100,5 +102,7 @@
     <button onclick="login()">ログイン</button>
     <div class="error" id="error"></div>
   </div>
+  <!-- Supabase環境変数を読み込む -->
+  <script src="/env.js"></script>
 </body>
 </html>
