--- a/admin-top.html
+++ b/admin-top.html
@@ -79,9 +79,10 @@
 
   <script type="module">
     import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
+    
     const supabase = createClient(
-      "https://htnmjsqgoapvuanrsuma.supabase.co",
-      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
+      window.env.NEXT_PUBLIC_SUPABASE_URL,
+      window.env.NEXT_PUBLIC_SUPABASE_ANON_KEY
     );
 
     // innerHTML後にscriptを再実行させる関数
@@ -135,5 +136,6 @@
 
     init();
   </script>
+  <script src="/env.js"></script>
 </body>
 </html>
