--- a/admin-contact.html
+++ b/admin-contact.html
@@ -71,11 +71,15 @@
 </section>
 
 <script type="module">
-  const { createClient } = await import("https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm");
+  import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
   const supabase = createClient(
-    "https://htnmjsqgoapvuanrsuma.supabase.co",
-    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
+    window.env.NEXT_PUBLIC_SUPABASE_URL,
+    window.env.NEXT_PUBLIC_SUPABASE_ANON_KEY
   );
+
+  // ===== 認証チェック =====
+  const { data: { session } } = await supabase.auth.getSession();
+  if (!session) window.location.href = "/admin-index.html";
   const statusMap={unread:"未読",in_progress:"対応中",done:"対応済"};
   const reverseStatusMap={"未読":"unread","対応中":"in_progress","対応済":"done"};
 
