--- a/service.html
+++ b/service.html
@@ -46,7 +46,7 @@
     <section class="relative bg-waju-light py-16">
       <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
         <div>
-          <h1 class="text-5xl font-extrabold mb-4 text-waju-primary leading-tight">ケアレイで、もっと楽に繋がろう。</h1>
+          <h1 class="text-5xl font-extrabold mb-4 text-waju-primary leading-tight">ケアレイで、<br>もっと楽に繋がろう。</h1>
           <p class="text-xl mb-6 text-gray-700 font-medium border-l-4 border-waju-accent pl-3">介護・福祉業界を支える業務支援プラットフォーム</p>
           <p class="text-lg text-gray-800 mb-6 leading-relaxed">現場経験から生まれた、「運営側」の負担を軽減するシステムです。非効率な連絡手段や高額なコスト負担といった業界の課題を根本から解決します。</p>
           <!-- リンクを https://carelay.net/ に修正 -->
