--- a/service.html
+++ b/service.html
@@ -61,7 +61,7 @@
     <!-- STOP THE WASTE (Problem/Challenge Section) -->
     <section class="py-20 bg-white">
       <div class="max-w-6xl mx-auto px-6">
-        <h2 class="text-4xl font-extrabold text-center text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">STOP THE WASTE. (課題)</h2>
+        <h2 class="text-4xl font-extrabold text-center text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">課題<br>STOP THE WASTE.</h2>
         <p class="text-center text-lg text-gray-700 mb-10">介護現場を15年以上経験した代表の実体験に基づき、運営側の「ムダ」を徹底的に排除します。</p>
 
         <div class="grid md:grid-cols-3 gap-8">
@@ -94,10 +94,10 @@
       <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
         <div class="md:order-2">
           <h2 class="text-4xl font-extrabold text-waju-primary mb-6">What is CARELAY?</h2>
-          <h3 class="text-2xl font-bold text-gray-800 mb-4">誰でも直感的に使える、業務支援プラットフォーム</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mb-4">誰でも直感的に使える、<br>業務支援プラットフォーム</h3>
           <p class="text-lg text-gray-700 mb-4 leading-relaxed">介護事業所の連携を、もっとスムーズに。<br>CARELAYは、高齢者介護・障害福祉事業所、および関係機関（病院、薬局、ケアマネ等）をオンラインで繋ぐ**業界特化型プラットフォーム**です。</p>
           <p class="text-lg text-gray-700 mb-4 leading-relaxed">「必要な機能に絞り、誰でも直感的に使えるUI」を採用。ITが苦手な方でも簡単に導入・運用が可能で、**複雑な操作や高額な導入費用は一切不要**です。</p>
-          <p class="text-xl font-semibold text-waju-accent italic">運営に生まれた“余裕”が、スタッフと利用者様へ還元されます。</p>
+          <p class="text-xl font-semibold text-waju-accent italic">運営に生まれた“余裕”が、<br>スタッフと利用者様へ還元されます。</p>
         </div>
         <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0010.png" alt="CARELAY Image" class="rounded-2xl shadow-2xl md:order-1"/>
       </div>
@@ -106,7 +106,7 @@
     <!-- Key Features -->
     <section class="py-20 bg-white">
       <div class="max-w-6xl mx-auto px-6">
-        <h2 class="text-4xl font-extrabold text-center text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">Key Features (主な機能)</h2>
+        <h2 class="text-4xl font-extrabold text-center text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">主な機能<br>Key Features</h2>
         <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
           <!-- Feature 1: メッセージ&ファイル送信機能 -->
           <div class="p-6 bg-gray-50 rounded-xl shadow-lg border-l-4 border-waju-primary hover:shadow-xl transition duration-300">
@@ -151,7 +151,7 @@
     <!-- Benefits -->
     <section class="py-20 bg-waju-light">
       <div class="max-w-6xl mx-auto px-6">
-        <h2 class="text-4xl font-extrabold text-center text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">The Benefits (導入効果)</h2>
+        <h2 class="text-4xl font-extrabold text-center text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">導入効果<br>The Benefits</h2>
         <div class="grid md:grid-cols-2 gap-8">
           <!-- Benefit 1: 時間短縮とペーパーレス化 -->
           <div class="p-6 bg-white rounded-xl shadow-lg border-l-4 border-waju-accent flex items-start space-x-4">
@@ -192,7 +192,7 @@
     <!-- Pricing & Flow -->
     <section class="py-20 bg-white">
       <div class="max-w-6xl mx-auto px-6">
-        <h2 class="text-4xl font-extrabold text-center text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">Pricing & Flow (料金と導入手順)</h2>
+        <h2 class="text-4xl font-extrabold text-center text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">料金と導入手順<br>Pricing & Flow</h2>
         <div class="grid md:grid-cols-2 gap-12 items-start">
           
           <!-- Pricing -->
