--- a/blog-detail.html
+++ b/blog-detail.html
@@ -51,17 +51,15 @@
     .cat{display:inline-block;background:#e7f1ff;color:#0b5ed7;font-size:.75rem;border-radius:999px;padding:3px 8px;margin-left:4px}
 
     /* ---------- ナビゲーション ---------- */
-    .post-nav{
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      gap:16px;
-      margin:18px 0;
-      background:var(--gray-100);
-      border:1px solid var(--gray-300);
-      border-radius:8px;
-      padding:8px 12px;
+    .post-nav {
+      max-width: 720px;
+      margin: 18px auto;
+      background: var(--gray-100);
+      border: 1px solid var(--gray-300);
+      border-radius: 8px;
+      padding: 8px 12px;
     }
+
     .nav-link{display:flex;align-items:center;gap:8px;color:var(--blue);text-decoration:none;font-weight:600}
     .nav-link.center{color:#111;}
     .nav-ico{width:32px;height:32px;display:inline-flex;align-items:center;justify-content:center;border-radius:999px;background:#e7f1ff}
@@ -74,17 +72,15 @@
     .tag{background:#f1f3f5;color:#333;border-radius:999px;padding:4px 10px;font-size:.8rem;}
 
     /* ---------- シェアボタン（右寄せ） ---------- */
-    .share{
-      display:flex;
-      justify-content:flex-end;
-      align-items:center;
-      gap:12px;
-      margin:12px 0 20px;
+    .share {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      gap: 12px;
+      margin: 12px 0 20px;
     }
-    .share .label{
-      color:#555;
-      font-size:.9rem;
-      margin-right:auto;
+    .share .label {
+      margin-right: 0;
     }
     .sbtn{width:40px;height:40px;border-radius:999px;display:inline-flex;align-items:center;justify-content:center;color:#fff;text-decoration:none}
     .sbtn svg{width:20px;height:20px;display:block}
