--- a/blog-detail.html
+++ b/blog-detail.html
@@ -52,14 +52,16 @@
 
     /* ---------- ナビゲーション ---------- */
     .post-nav {
-      max-width: 720px;
-      margin: 18px auto;
-      background: var(--gray-100);
-      border: 1px solid var(--gray-300);
-      border-radius: 8px;
-      padding: 8px 12px;
-    }
-
+      max-width: 720px;       /* 幅を狭める */
+      margin: 18px auto;      /* 中央寄せ */
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      gap:16px;
+      background:var(--gray-100);
+      border:1px solid var(--gray-300);
+      border-radius:8px;
+      padding:8px 12px;
     .nav-link{display:flex;align-items:center;gap:8px;color:var(--blue);text-decoration:none;font-weight:600}
     .nav-link.center{color:#111;}
     .nav-ico{width:32px;height:32px;display:inline-flex;align-items:center;justify-content:center;border-radius:999px;background:#e7f1ff}
@@ -73,14 +75,16 @@
 
     /* ---------- シェアボタン（右寄せ） ---------- */
     .share {
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      gap: 12px;
-      margin: 12px 0 20px;
+      display:flex;
+      justify-content:flex-end;  /* 全体を右寄せ */
+      align-items:center;
+      gap:12px;
+      margin:12px 0 20px;
     }
     .share .label {
-      margin-right: 0;
+      color:#555;
+      font-size:.9rem;
+      margin-right:0;  /* ← auto を削除 */
     }
     .sbtn{width:40px;height:40px;border-radius:999px;display:inline-flex;align-items:center;justify-content:center;color:#fff;text-decoration:none}
     .sbtn svg{width:20px;height:20px;display:block}
