--- a/blog-detail.html
+++ b/blog-detail.html
@@ -18,34 +18,34 @@
   <style>
     :root {
       --blue:#0d6efd;
-      --gray-100:#f8f9fa;
-      --gray-200:#e9ecef;
-      --gray-300:#dee2e6;
-      --gray-600:#6c757d;
+      --gray-100:#eef1f5;
+      --gray-200:#e8ebf0;
+      --gray-300:#d8dbe0;
+      --gray-600:#555;
     }
     html,body {
       margin:0;
       padding:0;
-      background:var(--gray-100);
+      background: linear-gradient(to bottom, var(--gray-100) 0%, var(--gray-200) 100%);
       font-family:"Noto Sans JP",system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue","Hiragino Kaku Gothic ProN","BIZ UDPGothic","Meiryo",sans-serif;
-      color:#111;
+      color:#222;
     }
     header,footer{min-height:56px}
     main{max-width:960px;margin:0 auto;padding:24px;box-sizing:border-box;}
 
-    /* ---------- 記事ヘッダー（カード化） ---------- */
+    /* ---------- 記事ヘッダー ---------- */
     .title-wrap{
       display:flex;
       gap:16px;
       align-items:flex-start;
       margin:16px 0 8px;
-      background:#fff;
-      border:1px solid var(--gray-300);
-      border-radius:12px;
-      box-shadow:0 2px 6px rgba(0,0,0,.08);
-      padding:16px;
+      background: linear-gradient(to bottom, #ffffff 0%, #f9fafc 100%);
+      border:none;
+      border-radius:14px;
+      box-shadow:0 3px 10px rgba(0,0,0,.12);
+      padding:18px;
     }
-    .thumb{width:100px;height:100px;border:1px solid var(--gray-300);border-radius:8px;object-fit:contain;background:#fff;}
+    .thumb{width:100px;height:100px;border-radius:8px;object-fit:contain;background:#fff;}
     h1{font-size:1.8rem;line-height:1.3;margin:0 0 6px;font-weight:700;}
     .meta{color:var(--gray-600);font-size:.9rem;margin-bottom:8px}
     .cat{display:inline-block;background:#e7f1ff;color:#0b5ed7;font-size:.75rem;border-radius:999px;padding:3px 8px;margin-left:4px}
@@ -58,9 +58,10 @@
       justify-content:space-between;
       align-items:center;
       gap:16px;
-      background:var(--gray-100);
+      background: linear-gradient(90deg, #edf0f5 0%, #e6e9ee 100%);
       border:1px solid var(--gray-300);
-      border-radius:8px;
+      border-radius:10px;
+      box-shadow:0 2px 5px rgba(0,0,0,.05);
       padding:8px 12px;
     }
     .nav-link{display:flex;align-items:center;gap:8px;color:var(--blue);text-decoration:none;font-weight:600}
@@ -70,8 +71,9 @@
     /* ---------- 本文 ---------- */
     .content{
       background:#fff;
+      border:none;
       border-radius:12px;
-      box-shadow:0 2px 6px rgba(0,0,0,.05);
+      box-shadow:0 3px 10px rgba(0,0,0,.08);
       padding:20px;
       min-height:48px;
     }
@@ -94,7 +96,7 @@
       font-size:.8rem;
     }
 
-    /* ---------- シェアボタン（右寄せ） ---------- */
+    /* ---------- シェアボタン ---------- */
     .share{
       display:flex;
       justify-content:flex-end;
@@ -104,8 +106,9 @@
     }
     .share .label{
       color:#555;
-      font-size:.9rem;
+      font-size:.85rem;
       margin-right:0;
+      opacity:0.8;
     }
     .sbtn{width:40px;height:40px;border-radius:999px;display:inline-flex;align-items:center;justify-content:center;color:#fff;text-decoration:none}
     .sbtn svg{width:20px;height:20px;display:block}
@@ -117,8 +120,16 @@
 
     /* ---------- スマホ対応 ---------- */
     @media (max-width:640px){
-      .title-wrap{align-items:center;margin-left:0;margin-right:0;}
-      .content,.tags,.share,.post-nav{margin-left:0;margin-right:0;}
+      main { padding:12px 0; }
+      .title-wrap,
+      .content,
+      .tags,
+      .share,
+      .post-nav {
+        margin-left:0;
+        margin-right:0;
+        border-radius:0;
+      }
       .thumb{width:84px;height:84px}
       h1{font-size:1.5rem}
     }
