--- a/blog-detail.html
+++ b/blog-detail.html
@@ -19,14 +19,14 @@
     :root {
       --blue:#0d6efd;
       --gray-100:#eef1f5;
-      --gray-200:#e8ebf0;
+      --gray-200:#eaecf0;
       --gray-300:#d8dbe0;
       --gray-600:#555;
     }
     html,body {
       margin:0;
       padding:0;
-      background: linear-gradient(to bottom, var(--gray-100) 0%, var(--gray-200) 100%);
+      background: linear-gradient(135deg, var(--gray-100) 0%, var(--gray-200) 100%);
       font-family:"Noto Sans JP",system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue","Hiragino Kaku Gothic ProN","BIZ UDPGothic","Meiryo",sans-serif;
       color:#222;
     }
@@ -39,7 +39,7 @@
       gap:16px;
       align-items:flex-start;
       margin:16px 0 8px;
-      background: linear-gradient(to bottom, #ffffff 0%, #f9fafc 100%);
+      background: linear-gradient(135deg, #ffffff 0%, #f7f8fa 100%);
       border:none;
       border-radius:14px;
       box-shadow:0 3px 10px rgba(0,0,0,.12);
@@ -58,7 +58,7 @@
       justify-content:space-between;
       align-items:center;
       gap:16px;
-      background: linear-gradient(90deg, #edf0f5 0%, #e6e9ee 100%);
+      background: linear-gradient(135deg, #f1f3f6 0%, #e9ebef 100%);
       border:1px solid var(--gray-300);
       border-radius:10px;
       box-shadow:0 2px 5px rgba(0,0,0,.05);
@@ -70,7 +70,7 @@
 
     /* ---------- 本文 ---------- */
     .content{
-      background:#fff;
+      background: linear-gradient(135deg, #ffffff 0%, #fafbfc 100%);
       border:none;
       border-radius:12px;
       box-shadow:0 3px 10px rgba(0,0,0,.08);
